Finish haffman-zip of lab6

--- a/06/lab/src/makefile
+++ b/06/lab/src/makefile
@@ -1,15 +1,15 @@
 all: main.o process.o readfile.o start.o main
 
-process.o :
+process.o : process.cpp process.h
 	g++ -c process.cpp -o process.o
 
-readfile.o :
+readfile.o : readfile.cpp readfile.h
 	g++ -c readfile.cpp -o readfile.o
 
-start.o :
+start.o : start.cpp start.h
 	g++ -c start.cpp -o start.o
 
-main.o :
+main.o : main.cpp
 	g++ -c main.cpp -o main.o
 
 main : process.o readfile.o start.o main.o
