Fix a bug of memory leaks in lab6

--- a/06/lab/hzip/makefile
+++ b/06/lab/hzip/makefile
@@ -1,4 +1,4 @@
-all: main.o process.o readfile.o start.o main
+all: main.o process.o readfile.o start.o hzip
 
 process.o : process.cpp process.h
 	g++ -c process.cpp -o process.o
@@ -12,8 +12,8 @@ start.o : start.cpp start.h
 main.o : main.cpp
 	g++ -c main.cpp -o main.o
 
-main : process.o readfile.o start.o main.o
-	g++ -std=c++14 process.o readfile.o start.o main.o -o main
+hzip : process.o readfile.o start.o main.o
+	g++ -std=c++14 process.o readfile.o start.o main.o -o hzip
 
 clean:
 	rm -rf process.o readfile.o start.o main.o
